@@ -4,3 +4,4 @@ TODO:
 - add localization support
 - fix player position on horse
 - make turning gradual when using mouse control
+- fix whinny_gallop_02.ogg loop
